@@ -30,6 +30,7 @@ Version 1.4.10 - SVN
   - Fix sorting of folder list with non-. delimiter (#1593229).
   - On display "+" symbol on multipart/mixed messages, e.g. those with
     real attachments.
+  - Fixes for issues with filters plugin (#1634735).
 
 Version 1.4.9a - 3 December 2006
 --------------------------------
